fix: truncate table-cell

--- a/src/less/components/text.less
+++ b/src/less/components/text.less
@@ -79,14 +79,14 @@
 .uk-text-light { font-weight: 300; }
 .uk-text-normal { font-weight: 400; }
 .uk-text-bold { font-weight: 700; }
- 
+
 .uk-text-lighter { font-weight: lighter; }
 .uk-text-bolder { font-weight: bolder; }
 
- 
+
 /* Style modifier
  ========================================================================== */
- 
+
 .uk-text-italic { font-style: italic; }
 
 
@@ -218,9 +218,9 @@
     white-space: nowrap;
 }
 
-/* 2 */
+/* 3 */
 th.uk-text-truncate,
-td.uk-text-truncate { max-width: 0; }
+td.uk-text-truncate { max-width: none; }
 
 
 /*
